# goit-python-final-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.cursor/skills/better-comments/: SKILL.md
.cursor/skills/slidev/: SKILL.md
.github/workflows/: pytest.yml  ruff.yml
docs/presentation/: README.md  package.json  slides.md
docs/presentation/components/: AboutMemberCard.vue  DetailsMemberCard.vue
src/app/: __init__.py  __main__.py  book.py  cli.py  contacts.py  notes.py  storage.py  types.py  utils.py
tests/: __init__.py  conftest.py  test_cli.py  test_contacts.py  test_notes.py  test_storage.py  test_utils.py
